name:                hl7
version:             0.0.0.1
synopsis:            Core HL7 Library
description:         Library to manipulate HL7 and HL7-like messages.
homepage:            https://github.com/thomas-dean/hl7
license:             MIT
license-file:        LICENSE
author:              Thomas Dean
maintainer:          tommydean_sd@yahoo.com
stability:           experimental
copyright:           2017 Thomas Dean
category:            Healthcare
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Data.HL7
  build-depends:       base >= 4.7 && < 5
                     , deepseq
  ghc-options:         -O2 -Wall -Wextra
  default-language:    Haskell2010

test-suite hl7-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hl7
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

Benchmark bench-hl7
    type:              exitcode-stdio-1.0
    hs-source-dirs:    bench
    main-is:           Bench.hs
    build-depends:     base
                     , hl7
                     , criterion
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N
    default-language:  Haskell2010

source-repository head
  type:     git
  location: https://github.com/thomas-dean/hl7
